--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email</h3>
-            <p>manuel.ferrero@hotmail.com</p>
+            <p><a style="color:white" href="mailto:contacto@manuelferrero.com.ar">contacto@manuelferrero.com.ar</a></p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
