Actualización de ecommerce-project

--- a/ecommerce-project-en.html
+++ b/ecommerce-project-en.html
@@ -74,7 +74,7 @@
             <h3>Project information</h3>
             <ul>
               <li><strong>Category</strong>: Website</li>
-              <li><strong>purpose</strong>: Educational project</li>
+              <li><strong>Client</strong>: MF! Soluciones Informáticas</li>
               <li><strong>Project initial date</strong>: October 2022</li>
               <li><strong>Project status</strong>: In development <i class="bi bi-circle-fill" style="color:blue"></i></li>
               <li><strong>Languages</strong>: Python, HTML, CSS and JavaScript</li>
@@ -82,10 +82,10 @@
 
             <p>
               <strong>Ecommerce website project using Django</strong><br>
-              The project is for educational use only. This consists of a website of a bookstore, through which you can make purchases online.
+              The project consists of a store website, through which clients can make purchases online.
               It is made making use of Python Django library. <br>
-              In it, users can create a user account, add products to their 'basket', make the online payment, edit their user information,
-              reset their password if forgotten and delete their account.
+              In it, users can create a user account, add products to their 'basket' and their wishlist, make the secure payment online
+              (through Mercadopago's SDK), edit their user information and addresses, reset their password if forgotten and delete their account.
             </p>
             <p><i class="bi bi-github"></i> <a href="https://github.com/FerreroManuel/ecommerce_project#english" target="_blank"> Go to repository in GitHub</a></p>
           </div>
