--- a/ecommerce-project-es.html
+++ b/ecommerce-project-es.html
@@ -74,7 +74,7 @@
             <h3>Información del proyecto</h3>
             <ul>
               <li><strong>Categoría</strong>: Website</li>
-              <li><strong>Finalidad</strong>: Proyecto educacional</li>
+              <li><strong>Cliente</strong>: MF! Soluciones Informáticas</li>
               <li><strong>Fecha de inicio del proyecto</strong>: Octubre 2022</li>
               <li><strong>Estado del proyecto</strong>: En desarrollo <i class="bi bi-circle-fill" style="color:blue"></i></li>
               <li><strong>Lenguages utilizados</strong>: Python, HTML, CSS y JavaScript</li>
@@ -82,10 +82,11 @@
 
             <p>
               <strong>Proyecto de sitio web con ecommerce usando Django</strong><br>
-              El proyecto es exclusivamente de uso educativo. Éste consiste en un sitio web de una tienda de libros, mediante el cual 
-              se pueden hacer compras online. El mismo está hecho utilizando la librería Django de Python. <br>
-              En él, los usuarios pueden crear una cuenta de usuario, agregar productos a su 'carrito', realizar el pago online, modificar
-              sus datos de usuario, reestablecer la contraseña en caso de olvido y eliminar su cuenta de usuario.
+              El proyecto consiste en un sitio web genérico para utilizar en una tienda, mediante el cual  los clientes
+              pueden hacer compras online. El mismo está hecho utilizando la librería Django de Python. <br>
+              En él, los usuarios pueden crear una cuenta de usuario, agregar productos a su 'carrito' y a su lista de favoritos,
+              realizar el pago online de manera segura (a través del SDK que provee Mercadopago), modificar sus datos de usuario 
+              y domicilios, reestablecer la contraseña en caso de olvido y eliminar su cuenta de usuario.
             </p>
             <p><i class="bi bi-github"></i> <a href="https://github.com/FerreroManuel/ecommerce_project#español" target="_blank"> Ir al repositorio en GitHub</a></p>
           </div>
