--- a/web-mf.html
+++ b/web-mf.html
@@ -85,7 +85,7 @@
               Con motivo de difundir mi trabajo y buscar empleo relacionado con la programación, decidí realizar un sitio web en donde
               pudiera exponer información sobre mí, sobre mis estudios y mis experiencias laborales, mi portfolio y mis datos de contacto.<br>
               De esta manera diseñé el sitio que estás navegando en este momento a partir de un template descargado de 
-              <a href="https://bootstrapmade.com/">BootstrapMade</a>.<br>
+              <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a>.<br>
               Muchas gracias por haber ingresado aquí y espero haya sido de tu agrado.
             </p>
             <p><i class="bi bi-github"></i> <a href="https://github.com/FerreroManuel/portfolio#español" target="_blank"> Ir al repositorio en GitHub</a></p>
