Se agregaron opciones de asunto en formulario de contacto

--- a/english.html
+++ b/english.html
@@ -633,6 +633,8 @@
             <option class="opt" hidden selected disabled value="">Select a subject</option>
             <option class="opt" value="Job offer">Job offer</option>
             <option class="opt" value="General inquire">General inquire</option>
+            <option class="opt" value="Website error">Website error</option>
+            <option class="opt" value="Morella error">Morella error</option>
             <option class="opt" value="Other">Other</option>
           </select>
 
