--- a/index.html
+++ b/index.html
@@ -639,6 +639,8 @@
             <option class="opt" hidden selected disabled value="">Seleccione un asunto</option>
             <option class="opt" value="Oferta de empleo">Oferta de empleo</option>
             <option class="opt" value="Consulta general">Consulta general</option>
+            <option class="opt" value="Error en el sitio web">Error en el sitio web</option>
+            <option class="opt" value="Error en Morella">Error en Morella</option>
             <option class="opt" value="Otro">Otro</option>
           </select>
 
