Se modificó la galería de proyectos

--- a/english.html
+++ b/english.html
@@ -477,6 +477,7 @@
         <p>My works</p>
       </div>
 
+      <!-- Filters -->
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
@@ -499,8 +500,7 @@
               <h4>Morella</h4>
               <p>Managenment software</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/morella.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Management software: Morella"><i class="bx bx-plus"></i></a>
-                <a href="morella-eng.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="morella-eng.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="More information about project"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -514,8 +514,7 @@
               <h4>Morella v2</h4>
               <p>Managenment software</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/morella-v2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Management software: Morella v2 (GUI)"><i class="bx bx-plus"></i></a>
-                <a href="morella-v2-eng.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="morella-v2-eng.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="More information about project"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -529,8 +528,7 @@
               <h4>Website Manuel Ferrero</h4>
               <p>Website</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/web-mf.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Personal website: Manuel Ferrero (This one you are watching!)"><i class="bx bx-plus"></i></a>
-                <a href="web-mf-eng.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="web-mf-eng.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="More information about project"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -544,8 +542,7 @@
               <h4>Ecommerce using Django</h4>
               <p>Website</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/ecommerce-project.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Website with ecommerce using Django"><i class="bx bx-plus"></i></a>
-                <a href="ecommerce-project-en.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="ecommerce-project-en.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="More information about project"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
