--- a/index.html
+++ b/index.html
@@ -483,6 +483,7 @@
         <p>Mis trabajos</p>
       </div>
 
+      <!-- Filters -->
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
@@ -505,8 +506,7 @@
               <h4>Morella</h4>
               <p>Software de gestión</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/morella.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Software de gestión Morella"><i class="bx bx-plus"></i></a>
-                <a href="morella.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="morella.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Más información acerca del proyecto"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -520,8 +520,7 @@
               <h4>Morella v2</h4>
               <p>Software de gestión</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/morella-v2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Software de gestión Morella v2 (GUI)"><i class="bx bx-plus"></i></a>
-                <a href="morella-v2.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="morella-v2.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Más información acerca del proyecto"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -535,8 +534,7 @@
               <h4>Website Manuel Ferrero</h4>
               <p>Website</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/web-mf.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Website personal Manuel Ferrero (¡Este que estás viendo!)"><i class="bx bx-plus"></i></a>
-                <a href="web-mf.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="web-mf.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Más información acerca del proyecto"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -550,8 +548,7 @@
               <h4>Ecommerce usando Django</h4>
               <p>Website</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/ecommerce-project.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sitio web con ecommerce usando Django"><i class="bx bx-plus"></i></a>
-                <a href="ecommerce-project-es.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="ecommerce-project-es.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Más información acerca del proyecto"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
